option(QGC_ENABLE_VIDEOSTREAMING "Enable video streaming" ON)
if(QGC_ENABLE_VIDEOSTREAMING)
	message(STATUS "Enabling video streaming support")

	find_package(Qt6 REQUIRED COMPONENTS Core)
	qt_add_library(qmlglsink STATIC)

	include(FindGStreamer)
	if(GST_FOUND)
		message(STATUS "GST Modules Found")
		include(BuildGstQtPlugin)
	else()
		message(WARNING "GST Modules Not Found")
    endif()
else()
    message(STATUS "Video streaming disabled")
endif()
